--- a/app/src/main/res/layout/me_fragment.xml
+++ b/app/src/main/res/layout/me_fragment.xml
@@ -6,10 +6,12 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/lo_me_avater"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:gravity="center_vertical"
-        android:background="#fff"
+        android:background="@drawable/avater_layout"
+        android:clickable="true"
         android:orientation="horizontal"
         android:layout_marginTop="10dp">
 
@@ -35,9 +37,11 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/lo_me_user_id"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#fff"
+        android:background="@drawable/avater_layout"
+        android:clickable="true"
         android:layout_marginTop="20dp"
         android:paddingLeft="10dp">
 
@@ -62,9 +66,11 @@
         android:layout_marginLeft="10dp"/>
 
     <LinearLayout
+        android:id="@+id/lo_me_user_password"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#fff"
+        android:background="@drawable/avater_layout"
+        android:clickable="true"
         android:paddingLeft="10dp">
 
 
@@ -88,9 +94,11 @@
         android:layout_marginLeft="10dp"/>
 
     <LinearLayout
+        android:id="@+id/lo_me_user_nickname"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#fff"
+        android:background="@drawable/avater_layout"
+        android:clickable="true"
         android:paddingLeft="10dp">
 
 
@@ -113,9 +121,11 @@
         android:layout_marginLeft="10dp"/>
 
     <LinearLayout
+        android:id="@+id/lo_me_user_sex"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#fff"
+        android:background="@drawable/avater_layout"
+        android:clickable="true"
         android:paddingLeft="15dp">
 
 
@@ -135,9 +145,11 @@
 
 
     <LinearLayout
+        android:id="@+id/lo_user_setting"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#fff"
+        android:background="@drawable/avater_layout"
+        android:clickable="true"
         android:paddingLeft="15dp"
         android:layout_marginTop="20dp">
 
