--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,10 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorGreen">#1AFA29</color>
+    <drawable name="GreenNormal">#06BE04</drawable>
+    <drawable name="GreenPressed">#00a000</drawable>
+    <drawable name="RedNormal">#C94B41</drawable>
+    <drawable name="RedPressed">#FF2D50</drawable>
+    <drawable name="Grey">#eee</drawable>
+    <drawable name="White">#fff</drawable>
 </resources>
