--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -19,7 +19,7 @@
 
         <LinearLayout
             android:id="@+id/lo_left_reseived_message"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:gravity="right"
@@ -33,12 +33,57 @@
                 android:layout_height="wrap_content"
                 android:text="你好"
                 android:layout_gravity="center"
-                android:textColor="#fff"
+                android:textColor="#000"
                 android:textSize="22sp"/>
         </LinearLayout>
 
 
     </LinearLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/lo_right_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="15dp">
+
+        <ImageView
+            android:id="@+id/img_profile_me"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_margin="5dp"
+            android:layout_alignParentRight="true"
+            android:src="@mipmap/icon"/>
+
+
+        <LinearLayout
+            android:id="@+id/lo_right_send_message"
+            android:layout_marginTop="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/send"
+            android:layout_marginRight="80dp"
+            android:layout_marginLeft="20dp"
+            android:layout_alignParentRight="true"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/tv_message_send"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="你好"
+                android:textColor="#fff"
+                android:textSize="22sp" />
+        </LinearLayout>
+
+
+
+    </RelativeLayout>
+
+
+
+    <!--
 
 
    <LinearLayout
@@ -51,17 +96,19 @@
        <LinearLayout
            android:id="@+id/lo_right_send_message"
            android:layout_marginTop="10dp"
-           android:layout_width="wrap_content"
+           android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/send"
            android:layout_marginRight="5dp"
+           android:layout_marginLeft="20dp"
            android:gravity="center_vertical">
 
            <TextView
                android:id="@+id/tv_message_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:text="你好"
+               android:text="你好你好你好你好你还你好你好你还"
+
                android:textColor="#fff"
                android:textSize="22sp" />
        </LinearLayout>
@@ -75,8 +122,9 @@
            android:src="@mipmap/icon"/>
 
 
-
    </LinearLayout>
+
+   -->
 
 
 
