所有界面逻辑已完善，进行数据之前的commit

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,6 +37,7 @@
         android:layout_marginRight="15dp"
         android:layout_marginTop="20dp"
         android:lines="1"
+        android:inputType="textPassword"
         android:drawableLeft="@mipmap/login"
         android:layout_marginStart="10dp"
         android:paddingLeft="10dp"
