--- a/app/src/main/res/layout/activity_my_avater.xml
+++ b/app/src/main/res/layout/activity_my_avater.xml
@@ -11,6 +11,6 @@
         android:layout_width="400dp"
         android:layout_height="400dp"
         android:layout_centerInParent="true"
-        android:src="@mipmap/ic_launcher"/>
+        android:src="@mipmap/icon"/>
 
 </RelativeLayout>
