--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,7 +11,8 @@
         android:layout_height="200dp"
         android:layout_gravity="center"
         android:src="@mipmap/ic_launcher"
-        android:layout_marginTop="40dp"/>
+        android:contentDescription="logo"
+        android:layout_marginTop="20dp"/>
 
     <EditText
         android:id="@+id/et_login_user"
@@ -21,11 +21,12 @@
         android:background="@android:drawable/edit_text"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="15dp"
+        android:layout_marginTop="10dp"
         android:lines="1"
+        android:ellipsize="end"
+        android:imeOptions="actionNext"
         android:drawableLeft="@mipmap/loginn"
-        android:layout_marginStart="10dp"
         android:paddingLeft="10dp"
-        android:drawablePadding="10dp"
         android:hint="请输入你的用户名"/>
 
     <EditText
@@ -37,6 +38,8 @@
         android:layout_marginRight="15dp"
         android:layout_marginTop="20dp"
         android:lines="1"
+        android:ellipsize="end"
+        android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:drawableLeft="@mipmap/login"
         android:layout_marginStart="10dp"
