1.成功发送正确格式的消息给服务器

--- a/app/src/main/res/layout/friendlist_item.xml
+++ b/app/src/main/res/layout/friendlist_item.xml
@@ -35,6 +35,15 @@
                 android:gravity="center_vertical"
                 android:text="朋友昵称"/>
 
+            <TextView
+                android:id="@+id/tv_friendlist_account"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:layout_gravity="left"
+                android:layout_marginLeft="7dp"
+                android:text="account"/>
+
 
         </LinearLayout>
     </LinearLayout>
