--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -3,6 +3,19 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- 时间 -->
+
+    <TextView
+        android:id="@+id/time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:background="#e7e8e5"
+        android:text="  2015 0809 22:00  "
+        android:textColor="#000000"
+        android:textSize="18sp" />
+
+
     <LinearLayout
         android:id="@+id/lo_left_message"
         android:layout_width="wrap_content"
@@ -39,6 +52,7 @@
 
 
     </LinearLayout>
+
 
 
     <RelativeLayout
